package pl.pietruszynski.loyaltyclub.api.admin.model;

public enum CouponReason {
    POINTS_EXCHANGE,
    COMPLAINT
}
