package pl.pietruszynski.loyaltyclub.api.store.model;

public enum HierarchyPromotionType {
    MULTIPLIER,
    EXCLUSION
}
